# cogniverse

./: .coverage_ingestion  .coveragerc  .dockerignore  .env.example  .env.prod.example  .gitignore  BACKEND_STRATEGY.md  CLAUDE.md  COMPREHENSIVE_ROUTING.md  CONSISTENCY_CHANGES.md  DSPY3.0_PLAN.md  EVALUATION_FRAMEWORK.md  EVALUATION_FRAMEWORK_PRD.md  EVALUATION_REDESIGN_PROPOSAL.md  LICENSE  Makefile  QUICKSTART.md  Readme.md  Readme.md.bak  V2_MIGRATION_SUMMARY.md  activate_and_run.sh  calculate_ingestion_coverage.py  config.yml  conftest.py  coverage_evaluation.xml  coverage_ingestion.xml  coverage_routing.xml  demo_routing_unified.py  docker-compose.prod.yml  docker-compose.yml  ingestion.coveragerc  mkdocs.yml  pyproject.toml  pyproject_modular.toml  pytest.ini  requirements-docs.txt  requirements.txt  run_all_ingestions.sh  run_tests.py  schema_rename_mapping.txt  (+3 more)
libs/agents/: README.md  pyproject.toml
libs/agents/cogniverse_agents/: __init__.py  _coercion.py  _confidence.py  _llm_resolution.py  _mm_factory.py  _rlm_promotion.py  a2a_gateway.py  a2a_routing_agent.py  adapter_loader.py  agent_orchestrator.py  agent_registry.py  agent_registry_server.py  audio_analysis_agent.py  audit_explanation_agent.py  citation_tracing_agent.py  coding_agent.py  composing_agent.py  composing_agents_main.py  contradiction_reconciliation_agent.py  cross_tenant_comparison_agent.py  deep_research_agent.py  deep_synthesis_workflow.py  detailed_report_agent.py  document_agent.py  dspy_a2a_agent_base.py  dspy_agent_optimizer.py  dspy_integration_mixin.py  entity_extraction_agent.py  federated_query_agent.py  gateway_agent.py  graph_bindable.py  image_search_agent.py  kg_traversal_agent.py  knowledge_summarization_agent.py  memory_aware_mixin.py  multi_agent_orchestrator.py  multi_document_synthesis_agent.py  multimodal.py  orchestrator_agent.py  profile_selection_agent.py  (+15 more)
libs/cli/: pyproject.toml
libs/cli/cogniverse_cli/: __init__.py  admin.py  argo.py  cluster.py  code.py  config.py  constants.py  deploy.py  graph.py  health.py  images.py  index.py  main.py  sandbox.py  secrets.py  streaming.py
libs/core/: README.md  pyproject.toml
libs/dashboard/: Dockerfile  README.md  pyproject.toml
libs/dashboard/cogniverse_dashboard/: app.py  search_summary.py
libs/evaluation/: README.md  pyproject.toml
libs/evaluation/cogniverse_evaluation/: __init__.py  cli.py  online_evaluator.py  quality_monitor.py  span_evaluator.py
libs/finetuning/: README.md  pyproject.toml
libs/finetuning/cogniverse_finetuning/: __init__.py  orchestrator.py
libs/foundation/: README.md  pyproject.toml
libs/foundation/cogniverse_foundation/: __init__.py  confidence.py
libs/messaging/: pyproject.toml
libs/messaging/cogniverse_messaging/: __init__.py  auth.py  command_router.py  conversation.py  gateway.py  runtime_client.py  telegram_handler.py
libs/runtime/: Dockerfile  README.md  pyproject.toml
libs/runtime/cogniverse_runtime/: a2a_executor.py  agent_dispatcher.py  config_loader.py  inference_health_check.py  job_executor.py  main.py  memory_init.py  messaging.py  messaging_redis.py  openshell_cert_rotator.py  openshell_health.py  optimization_cli.py  quality_monitor_cli.py  sandbox_http.py  sandbox_manager.py  sandbox_pool.py
libs/sdk/: README.md  pyproject.toml
libs/sdk/cogniverse_sdk/: __init__.py  document.py
libs/synthetic/: README.md  pyproject.toml
libs/synthetic/cogniverse_synthetic/: __init__.py  api.py  backend_querier.py  dspy_modules.py  dspy_signatures.py  profile_selector.py  registry.py  schemas.py  service.py
libs/telemetry-phoenix/: README.md  pyproject.toml
libs/telemetry-phoenix/cogniverse_telemetry_phoenix/: __init__.py  provider.py
libs/vespa/: README.md  pyproject.toml
libs/vespa/cogniverse_vespa/: __init__.py  _vespa_factory.py  _yql.py  backend.py  config.py  config_store.py  config_utils.py  embedding_processor.py  ingestion_client.py  json_schema_parser.py  memory_store.py  metadata_schemas.py  ranking_strategy_extractor.py  search_backend.py  strategy_aware_processor.py  tenant_aware_search_client.py  tenant_schema_manager.py  vespa_schema_manager.py  vespa_search_client.py
src/app/: pyproject.toml  setup.py
src/app/agents/: README.md  a2a_enhanced_gateway.py  a2a_gateway.py  a2a_routing_agent.py  agent_orchestrator.py  agent_registry.py  agent_registry_server.py  audio_analysis_agent.py  composing_agents_main.py  detailed_report_agent.py  document_agent.py  dspy_a2a_agent_base.py  dspy_agent_optimizer.py  dspy_integration_mixin.py  enhanced_agent_orchestrator.py  enhanced_result_aggregator.py  enhanced_routing_agent.py  enhanced_video_search_agent.py  image_search_agent.py  memory_aware_mixin.py  multi_agent_orchestrator.py  query_analysis_tool_v2.py  query_analysis_tool_v3.py  query_encoders.py  result_aggregator.py  result_enhancement_engine.py  routing_agent.py  summarizer_agent.py  text_agent_server.py  text_analysis_agent.py  video_agent_letta_example.py  video_agent_refactored.py  video_agent_server.py  video_search_agent.py  workflow_intelligence.py  workflow_types.py
src/app/ingestion/: ARCHITECTURE.md  README.md  exceptions.py  pipeline.py  pipeline_builder.py  processing_strategy_set.py  processor_base.py  processor_manager.py  strategies.py  strategy.py  strategy_factory.py
src/app/instrumentation/: __init__.py  phoenix.py
src/app/routing/: README.md  __init__.py  adaptive_threshold_learner.py  advanced_optimizer.py  base.py  (+31 more)
src/common/: __init__.py  a2a_mixin.py  agent_config.py  config.py  config_api_mixin.py  config_compat.py  config_manager.py  config_schema.py  config_store.py  config_store_interface.py  config_utils.py  document.py  dspy_module_registry.py  dynamic_dspy_mixin.py  health_mixin.py  mem0_memory_manager.py  mem0_vespa_store.py  pyproject.toml  setup.py  tenant_utils.py  unified_config.py  vespa_config_store.py  vespa_memory_config.py  vlm_interface.py
src/evaluation/: README.md  __init__.py  cli.py  experiments.py  inspect_integration.py  phoenix_experiments_final.py  pyproject.toml  setup.py  span_evaluator.py
(+2308 files in other folders)
