[tool.uv]
# Only allow pre-releases for graphql-core (required by arize-phoenix 14.x)
prerelease = "if-necessary-or-explicit"

# PyTorch backend extras — pick exactly one with `uv sync --extra <name>`.
# macOS (Apple Silicon) installs without an extra: the default PyPI wheel
# already includes MPS / Metal support.
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cuda" },
        { extra = "rocm" },
    ],
]

# Pin resolution to the platform/Python combinations we actually support.
# The rocm6.4 wheel index ships pytorch-triton-rocm==3.4.0 only for cp312,
# so leaving Python 3.13 in the resolution graph causes --extra rocm to
# report unsat. Listing 3.12 explicitly keeps resolution sane.
# Windows is not a supported target — openshell and the rocm/cuda wheel
# indexes don't all ship win_amd64 wheels.
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64' and python_full_version == '3.12.*'",
    "sys_platform == 'darwin' and platform_machine == 'arm64' and python_full_version == '3.12.*'",
]

[tool.uv.workspace]
members = ["libs/*"]

[project]
name = "cogniverse"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12,<3.14"
dependencies = [
    # --- Pinned versions (supply chain safety) ---
    # LLM & AI Frameworks
    "litellm==1.83.4",
    "dspy-ai==3.1.3",
    "openai-whisper==20250625",
    "ollama==0.6.1",
    "sentence-transformers==5.1.1",
    "mem0ai==1.0.11",
    # Machine Learning
    "torch==2.8.0",
    "jax==0.9.2",
    "jaxlib==0.9.2",
    "transformers==4.56.2",
    "colpali-engine==0.3.13",
    "pylate==1.4.0",
    "gliner==0.2.26",
    "xgboost==3.2.0",
    "scikit-learn==1.8.0",
    # Search & Retrieval
    "pyvespa==1.1.2",
    # Observability & Telemetry
    "arize-phoenix==14.2.1",
    "graphql-core>=3.3.0a0",  # pre-release required by arize-phoenix 14.x
    "arize-phoenix-evals==3.0.0",
    "opentelemetry-api==1.41.0",
    "opentelemetry-sdk==1.41.0",
    "opentelemetry-instrumentation==0.62b0",
    "mlflow==3.11.1",
    # Evaluation
    "inspect-ai==0.3.205",
    "ragas==0.4.3",
    # Web & API
    "fastapi==0.135.3",
    "uvicorn==0.44.0",
    "httpx==0.28.1",
    "a2a-sdk[http-server]==0.3.26",
    "streamlit==1.56.0",
    # Data Processing
    "numpy==2.4.4",
    "scipy==1.17.1",
    "pyarrow==23.0.1",
    "pydantic==2.12.5",
    # Computer Vision & Audio
    "opencv-python==4.13.0.92",
    "pillow==12.2.0",
    "faster-whisper==1.2.1",
    "librosa==0.11.0",
    "pdf2image==1.17.0",
    "pypdf2==3.0.1",
    # NLP
    "spacy==3.8.14",
    "langextract==1.2.1",
    # Visualization
    "plotly==6.7.0",
    "embedding-atlas==0.20.0",
    "umap-learn==0.5.12",
    # Utilities
    "modal==1.4.1",
    "aiofiles==25.1.0",
    "msgpack==1.1.2",
    "tabulate==0.10.0",
    "pytest-asyncio==1.3.0",
    # Code Analysis
    "tree-sitter==0.25.2",
    "tree-sitter-python==0.25.0",
    "tree-sitter-javascript==0.25.0",
    "tree-sitter-typescript==0.23.2",
    "tree-sitter-go==0.25.0",
    "cogniverse-agents",
    "cogniverse-core",
    "cogniverse-dashboard",
    "cogniverse-evaluation",
    "cogniverse-finetuning",
    "cogniverse-foundation",
    "cogniverse-messaging",
    "cogniverse-runtime",
    "cogniverse-sdk",
    "cogniverse-synthetic",
    "cogniverse-telemetry-phoenix",
    "cogniverse-vespa",
]

[tool.uv.sources]
cogniverse-agents = { workspace = true }
cogniverse-core = { workspace = true }
cogniverse-dashboard = { workspace = true }
cogniverse-evaluation = { workspace = true }
cogniverse-finetuning = { workspace = true }
cogniverse-foundation = { workspace = true }
cogniverse-messaging = { workspace = true }
cogniverse-runtime = { workspace = true }
cogniverse-sdk = { workspace = true }
cogniverse-synthetic = { workspace = true }
cogniverse-telemetry-phoenix = { workspace = true }
cogniverse-vespa = { workspace = true }
cogniverse-cli = { workspace = true }
# Non-Darwin only: macOS arm64 uses the default PyPI wheel which already
# ships MPS support. CUDA / ROCm wheels exist only for linux/win.
torch = [
    { index = "pytorch-cuda", extra = "cuda", marker = "sys_platform != 'darwin'" },
    { index = "pytorch-rocm", extra = "rocm", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cpu",  extra = "cpu",  marker = "sys_platform != 'darwin'" },
]
torchvision = [
    { index = "pytorch-cuda", extra = "cuda", marker = "sys_platform != 'darwin'" },
    { index = "pytorch-rocm", extra = "rocm", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cpu",  extra = "cpu",  marker = "sys_platform != 'darwin'" },
]
# pytorch-triton-rocm is a transitive dep of the rocm-built torch and lives
# in the rocm wheel index (PyPI does not ship rocm builds).
pytorch-triton-rocm = [
    { index = "pytorch-rocm", extra = "rocm", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

# rocm6.4 publishes torch==2.8.0+rocm6.4, matching the project's torch pin.
# Strix Halo (gfx1151) support landed in ROCm 6.3, so 6.4 is fully supported.
# Bumping to rocm7.0 requires torch>=2.10.0, which would force colpali-engine
# 0.3.15 which in turn requires transformers>=5.3.0 — and pylate 1.4.0 (the
# latest release) caps transformers<=4.56.2, so the upgrade path is blocked
# upstream until pylate ships a transformers v5–compatible release.
[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.4"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[project.optional-dependencies]
# PyTorch backend selectors. Pick exactly one with `uv sync --extra <name>`:
#
#   uv sync --extra cuda    # NVIDIA GPU            → torch+cu128
#   uv sync --extra rocm    # AMD GPU on Linux      → torch+rocm6.4
#                           #   (Strix Halo / gfx1151, MI300, RX 7000, ...)
#   uv sync --extra cpu     # no GPU on Linux/Win   → torch+cpu
#
# macOS (Apple Silicon) — just `uv sync` with no extra. The default PyPI
# arm64 wheel already ships MPS / Metal support, so the index overrides
# above don't need to fire there.
#
# Or run scripts/install_with_gpu.sh which autodetects the platform and
# picks the right extra (or none, on macOS).
cuda = ["torch", "torchvision"]
rocm = ["torch", "torchvision", "pytorch-triton-rocm"]
cpu = ["torch", "torchvision"]
dev = [
    # Linting and Code Quality
    "ruff>=0.4.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
    "isort>=5.12.0",
    # Testing Framework
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.0",
    # Security Scanning
    "bandit>=1.7.5",
    "safety>=3.0.0",
    # Browser E2E Testing
    "pytest-playwright>=0.5.2",
]
sandbox = [
    "openshell>=0.0.13",
]
test = [
    "playwright>=1.58.0",
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
known_first_party = ["cogniverse_sdk", "cogniverse_foundation", "cogniverse_core", "cogniverse_evaluation", "cogniverse_telemetry_phoenix", "cogniverse_agents", "cogniverse_vespa", "cogniverse_synthetic", "cogniverse_runtime", "cogniverse_dashboard", "cogniverse_finetuning"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
]
ignore = [
    "E501",  # line too long, handled by black
    "E402",  # module level import not at top of file (handled manually with noqa)
    # Relaxed rules - focus on functionality over style
    "B007",  # unused loop variables (common in iteration)
    "B017",  # pytest.raises(Exception) is fine for general error testing
    "B024",  # abstract classes don't always need abstract methods
    "B904",  # raise statements don't always need 'from' chains
    "UP006", # dict/Dict and list/List are both fine
    "UP035", # typing.Dict vs dict is stylistic
    "UP038", # isinstance((int, float)) vs int | float is stylistic 
    "UP045", # Optional[T] vs T | None is stylistic
    "C401",  # set comprehensions vs generator is minor optimization
    "C408",  # dict() vs {} is stylistic
    "W291",  # trailing whitespace (handled by editors)
    "W293",  # blank line with whitespace (handled by editors)
]

[tool.ruff.lint.isort]
known-first-party = ["cogniverse_sdk", "cogniverse_foundation", "cogniverse_core", "cogniverse_evaluation", "cogniverse_telemetry_phoenix", "cogniverse_agents", "cogniverse_vespa", "cogniverse_synthetic", "cogniverse_runtime", "cogniverse_dashboard", "cogniverse_finetuning"]

[tool.mypy]
python_version = "3.12"
# Relaxed configuration - focus on major issues only
warn_return_any = false
warn_unused_configs = false
disallow_untyped_defs = false
ignore_missing_imports = true
# Disable strict checks that cause noise
check_untyped_defs = false
disallow_any_generics = false
disallow_any_unimported = false
disallow_any_expr = false
disallow_subclassing_any = false
warn_unreachable = false
warn_redundant_casts = false
warn_unused_ignores = false
# Allow dynamic typing patterns
allow_redefinition = true
allow_untyped_globals = true
implicit_reexport = true
# Skip error codes that generate most noise
disable_error_code = [
    "var-annotated",      # Missing type annotations
    "has-type",           # Cannot determine type
    "no-any-return",      # Returning Any
    "union-attr",         # None attribute access
    "arg-type",           # Incompatible argument types
    "assignment",         # Assignment type mismatches
    "index",              # Indexing issues
    "import-untyped",     # Untyped imports
    "return-value",       # Return type issues
    "attr-defined",       # Attribute access on None/wrong type
    "call-arg",           # Too many/few arguments
    "operator",           # Unsupported operand types
    "override",           # Method override issues
    "misc",               # Miscellaneous type issues
    "return",             # Missing return statements
    "annotation-unchecked", # Untyped function bodies
    "empty-body",         # Empty method bodies
    "call-overload",      # Function overload issues
    "abstract",           # Abstract class instantiation
    "list-item",          # List item type mismatches
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.17.1",
    "ruff>=0.12.9",
    "cogniverse-cli",
    "pytest-playwright>=0.7.2",
]
docs = [
    "mkdocs==1.6.1",
    "mkdocs-material==9.6.21",
    "mkdocs-material-extensions==1.3.1",
    "mkdocs-minify-plugin==0.8.0",
    "mkdocs-git-revision-date-localized-plugin==1.4.7",
]
