[project]
name = "cogniverse-agents"
version = "0.1.0"
description = "Agent implementations, routing logic, and search enhancement for Cogniverse"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Cogniverse Team"}
]

dependencies = [
    "cogniverse-core",

    # Machine Learning for embeddings and models
    "torch>=2.5.0",
    "transformers>=4.50.0",
    "colpali-engine>=0.3.12",
    "sentence-transformers>=5.1.0",

    # Optimization and ML
    "xgboost>=3.0.5",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",

    # NLP and language
    "spacy>=3.7.0",
    "gliner>=0.2.21",
    "langextract>=1.0.6",

    # MLflow for experiment tracking
    "mlflow>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cogniverse_agents"]
