[project]
name = "cogniverse-agents"
version = "0.1.0"
description = "Agent implementations, routing logic, and search enhancement for Cogniverse"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Cogniverse Team"}
]

dependencies = [
    "cogniverse-sdk",
    "cogniverse-core",
    "cogniverse-synthetic",

    # Google Agent Development Kit for composing agent
    "google-adk==1.14.1",

    # Machine Learning for embeddings and models
    "torch==2.8.0",
    "transformers==4.56.2",
    "colpali-engine==0.3.13",
    "sentence-transformers==5.1.1",

    # Optimization and ML
    "xgboost==3.2.0",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",

    # NLP and language
    "spacy==3.8.14",
    "gliner==0.2.26",
    "langextract==1.2.1",

    # MLflow for experiment tracking
    "mlflow==3.11.1",
]

[tool.uv.sources]
cogniverse-sdk = { workspace = true }
cogniverse-core = { workspace = true }
cogniverse-synthetic = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cogniverse_agents"]
