[project]
name = "cogniverse-cli"
dynamic = ["version"]
description = "CLI for deploying and managing Cogniverse"
requires-python = ">=3.12"
dependencies = [
    "click==8.1.8",
    "rich==14.3.4",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "pyyaml==6.0.3",
    # Derive the git version for local dev image tags (same tool hatch-vcs uses),
    # so a `cogniverse up` image is stamped with the exact commit it was built from.
    "setuptools-scm>=8",
]

[project.scripts]
cogniverse = "cogniverse_cli.main:cli"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
# Package lives at libs/<pkg>; the git repo (tag source) is two levels up.
root = "../.."

[tool.hatch.build.targets.wheel]
packages = ["cogniverse_cli"]
artifacts = [
    "cogniverse_cli/data/**",
]
