[project]
name = "cogniverse-core"
version = "0.1.0"
description = "Core interfaces, registries, and base classes for Cogniverse multi-agent RAG system"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Cogniverse Team"}
]

dependencies = [
    # SDK - Core interfaces
    "cogniverse-sdk",
    "cogniverse-foundation",
    "cogniverse-evaluation",
    # Core DSPy and LLM
    "dspy-ai>=3.0.2",
    "litellm>=1.73.0",
    # Telemetry and Observability
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-instrumentation>=0.41b0",
    "arize-phoenix>=12.9.0",
    # Data validation and serialization
    "pydantic>=2.0.0",
    # Configuration and storage
    "pyyaml>=6.0",
    # Memory management
    "mem0ai>=0.1.118",
    # Utilities
    "aiofiles>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.12.9",
    "black>=25.1.0",
    "mypy>=1.17.1",
]

[tool.uv.sources]
cogniverse-sdk = { workspace = true }
cogniverse-foundation = { workspace = true }
cogniverse-evaluation = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cogniverse_core"]
