[project]
name = "cogniverse-core"
version = "0.1.0"
description = "Core interfaces, registries, and base classes for Cogniverse multi-agent AI platform"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Cogniverse Team"}
]

dependencies = [
    # SDK - Core interfaces
    "cogniverse-sdk",
    "cogniverse-foundation",
    "cogniverse-evaluation",
    # Core DSPy and LLM
    "dspy-ai==3.1.3",
    "litellm==1.83.4",
    # Telemetry and Observability
    "opentelemetry-api==1.41.0",
    "opentelemetry-sdk==1.41.0",
    "opentelemetry-instrumentation==0.62b0",
    # Data validation and serialization
    "pydantic==2.12.5",
    # Configuration and storage
    "pyyaml==6.0.3",
    # Memory management
    "mem0ai==1.0.11",
    # Utilities
    "aiofiles==25.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "ruff==0.15.10",
    "black==26.3.1",
    "mypy==1.20.0",
]

[tool.uv.sources]
cogniverse-sdk = { workspace = true }
cogniverse-foundation = { workspace = true }
cogniverse-evaluation = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cogniverse_core"]
