[project]
name = "cogniverse-dashboard"
version = "0.1.0"
description = "Standalone dashboard with Phoenix analytics and evaluation UI for Cogniverse"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Cogniverse Team"}
]

dependencies = [
    "cogniverse-sdk",
    "cogniverse-core",

    # Dashboard UI
    "streamlit>=1.29.0",
    "plotly>=6.0.0",

    # Phoenix and evaluation
    "arize-phoenix>=4.0.0",
    "arize-phoenix-evals>=0.4.0",
    "inspect-ai>=0.3.0",
    "ragas>=0.1.0",

    # Visualization
    "embedding-atlas>=0.2.0",
    "umap-learn>=0.5.0",
    "pyarrow>=14.0.0",
    "scikit-learn>=1.3.0",

    # Data manipulation
    "scipy>=1.10.0",
    "tabulate>=0.9.0",
]

[tool.uv.sources]
cogniverse-sdk = { workspace = true }
cogniverse-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cogniverse_dashboard"]
