[project]
name = "cogniverse-dashboard"
version = "0.1.0"
description = "Standalone dashboard with Phoenix analytics and evaluation UI for Cogniverse"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Cogniverse Team"}
]

dependencies = [
    "cogniverse-sdk",
    "cogniverse-core",
    "cogniverse-evaluation",
    "cogniverse-runtime",
    "cogniverse-vespa",
    "cogniverse-telemetry-phoenix",

    # Dashboard UI
    "streamlit==1.56.0",
    "plotly==6.7.0",

    # Phoenix and evaluation
    "arize-phoenix==14.2.1",
    "arize-phoenix-evals==3.0.0",
    "inspect-ai==0.3.205",
    "ragas==0.4.3",

    # Visualization
    "embedding-atlas==0.20.0",
    "umap-learn==0.5.12",
    "pyarrow==23.0.1",
    "scikit-learn==1.8.0",

    # Data manipulation
    "scipy==1.17.1",
    "tabulate==0.10.0",

    # Memory management (Mem0 with Ollama embeddings)
    "ollama==0.6.1",
]

[tool.uv.sources]
cogniverse-sdk = { workspace = true }
cogniverse-core = { workspace = true }
cogniverse-evaluation = { workspace = true }
cogniverse-runtime = { workspace = true }
cogniverse-vespa = { workspace = true }
cogniverse-telemetry-phoenix = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cogniverse_dashboard"]
