[project]
name = "cogniverse-evaluation"
version = "0.1.0"
description = "Cogniverse Evaluation - Provider-agnostic evaluation framework"
requires-python = ">=3.12"
dependencies = [
    "cogniverse-foundation",
    "cogniverse-sdk",
    "inspect-ai>=0.3.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "pillow>=10.0.0",
]

[tool.uv.sources]
cogniverse-foundation = { workspace = true }
cogniverse-sdk = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
