[project]
name = "cogniverse-evaluation"
version = "0.1.0"
description = "Cogniverse Evaluation - Provider-agnostic evaluation framework"
requires-python = ">=3.12"
dependencies = [
    "cogniverse-foundation",
    "cogniverse-sdk",
    "inspect-ai==0.3.205",
    "numpy==2.4.4",
    "pandas==2.3.3",
    "scikit-learn==1.8.0",
    "pillow==12.2.0",
]

[tool.uv.sources]
cogniverse-foundation = { workspace = true }
cogniverse-sdk = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cogniverse_evaluation"]
