[project]
name = "cogniverse-evaluation"
dynamic = ["version"]
description = "Cogniverse Evaluation - Provider-agnostic evaluation framework"
requires-python = ">=3.12"
dependencies = [
    "cogniverse-foundation",
    "cogniverse-sdk",
    "inspect-ai==0.3.205",
    "numpy==2.4.4",
    "pandas==2.3.3",
    "scikit-learn==1.8.0",
    "pillow==12.2.0",
]

[tool.uv.sources]
cogniverse-foundation = { workspace = true }
cogniverse-sdk = { workspace = true }

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
# Package lives at libs/<pkg>; the git repo (tag source) is two levels up.
root = "../.."

[tool.hatch.build.targets.wheel]
packages = ["cogniverse_evaluation"]
